--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,12 @@ configurations {
 }
 
 dependencies {
+	
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter-web")
+    
+    compile 'org.webjars:bootstrap:3.3.1'
+    
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
     testCompile("org.springframework.boot:spring-boot-starter-test") 
 }
