--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,23 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.0.BUILD-SNAPSHOT'
+        springBootVersion = '1.2.2.BUILD-SNAPSHOT'
     }
     repositories {
-    mavenLocal()
+    	mavenLocal()
         mavenCentral()
         maven { url "https://repo.spring.io/snapshot" }
         maven { url "https://repo.spring.io/milestone" }
+
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
-apply plugin: 'idea' 
-apply plugin: 'org.springframework.boot.spring-boot' 
+apply plugin: 'idea'
+apply plugin: 'spring-boot' 
 apply plugin: 'war'
 
 
@@ -32,6 +33,7 @@ repositories {
     mavenCentral()
     maven { url "https://repo.spring.io/snapshot" }
     maven { url "https://repo.spring.io/milestone" }
+
 }
 
 configurations {
@@ -39,16 +41,21 @@ configurations {
 }
 
 dependencies {
-	
-    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:1.2.5'
+    
+    compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    
+    compile 'mysql:mysql-connector-java:5.1.34'
+    
+    
     
     compile 'org.webjars:bootstrap:3.3.1'
     
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
-    testCompile("org.springframework.boot:spring-boot-starter-test") 
+    testCompile("org.springframework.boot:spring-boot-starter-test")
 }
-
 
 eclipse {
     classpath {
@@ -58,5 +65,5 @@ eclipse {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
+    gradleVersion = '1.12'
 }
