--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,21 @@
 # LOGGING
 logging.level.com.livingoncodes.vboard=DEBUG
 
+
 # THYMELEAF 
 spring.thymeleaf.cache=false
+
+
+# DATASOURCE
+spring.datasource.url=jdbc:mysql://localhost/vboard
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#JPA
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming-strategy =org.hibernate.cfg.ImprovedNamingStrategy
+spring.data.jpa.repositories.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
