--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #JPA
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy =org.hibernate.cfg.ImprovedNamingStrategy
 spring.data.jpa.repositories.enabled=true
